test/spec_vectors/call/fail/module_11.wat
(module (func $type-first-empty-in-block (block (call 1))) (func (param i32)))